# portum-repositorium

./: .gitignore  .prettierignore  .prettierrc  app.py  pyproject.toml  start.zsh  tasks.py  todo.md
delivery-base/: app.py  make_env.py  pyproject.toml  tasks.py
delivery-base/delivery/: __init__.py
delivery-base/delivery/ext/cli/: __init__.py
delivery-base/delivery/ext/config/: __init__.py
delivery-base/delivery/ext/db/: __init__.py
delivery-base/delivery/forms/: main.py
delivery-base/delivery/models/: __init__.py  business.py  business_type.py  level.py  location.py  role.py  role_user.py  user.py
delivery-base/delivery/views/: __init__.py  main.py
delivery-base/static/css/: style.css
delivery-base/templates/main/: base.html  carrinho.html  contato.html  index.html  macros.html
delivery-base/tests/: test_main.py
delivery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
instance/: delivery.db
repository.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
repository/ext/cli/: __init__.py
repository/ext/config/: __init__.py
repository/ext/db/: __init__.py  seed.py  tags.py
repository/ext/debugtoolbar/: __init__.py
repository/ext/utils/: easy_time.py
repository/ext/wtf/: __init__.py
repository/forms/: main.py
repository/models/: __init__.py  article_tags.py  articles.py  authors.py  newsletter.py  tags.py
repository/services/: porto_central_scraper.py
repository/services/helpers/: get_author.py  request_headers.py  save_article.py  scrapped_article.py  tagger.py  word_press.py
repository/services/scrappers/: agazeta.py  porto_central.py  presidente_kennedy.py
repository/views/: __init__.py  main.py
static/css/: global.css
templates/main/: about.html  base.html  index.html  news.html  news_detail.html  newsletter.html
templates/main/partials/: article_cards.html  footer.html  navbar.html
tests/: test_main.py
uvv/: TECHNICAL_DOCUMENTATION.md  avaliation.md
(+6 files in other folders)
