# Mechanism for storing package requirements: 
# PEP 621 – Define a estrutura basica do [project] no pyproject.toml
# Resolution: 10-Oct-2024

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repository"
version = "0.2.2"
description = "A repository of news about Central Port"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Rafael Venturini Dipalma", email = "rafaelventurinidipalma@gmail.com" }
]
dependencies = [
    "flask",
    "sqlalchemy",
    "bs4",
    "dotenv",
    "flask-wtf",
    "email-validator",
    "flask-sqlalchemy",
    "playwright",
    "unidecode>=1.4.0",
    "invoke>=3.0.3",
]


[tool.repository]
display_name = "repository"
company = "Ruffus Buffus"


[project.optional-dependencies]
dev = [
    "ipython",
    "flask-shell-ipython",
    "black",
    "flake8",
    "flask-debugtoolbar >= 0.15",
]


test = [
    "pytest >= 8.3",
    "pytest-cov >= 5.0",
    "pytest-flask",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]                         # raiz do projeto
namespaces = true                     # permite namespace packages (recomendado na maioria dos casos modernos)
exclude = ["tests*", "docs*"]         # exemplo de exclusao comum

# Opcional: especifique explicitamente arquivos de dados (se nao usar MANIFEST.in ou setuptools-scm)
[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.png", "*.jpg"]   # para todos os pacotes
"views" = ["templates/*", "static/*"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "deptry>=0.23.1",
    "flake8>=7.3.0",
    "flask-debugtoolbar>=0.16.0",
    "flask-shell-ipython>=0.5.3",
    "ipython>=8.18.1",
]

#deploy = [
#    "flit==0.1.0",
#]